--- a/code/orbit_homework.ipynb
+++ b/code/orbit_homework.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "<Unit('year')>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "<Quantity([ 3.6686486e+22 -0.0000000e+00], 'newton')>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,8 @@
     "def slope_func(state, t, system):\n",
     "    \"\"\"Compute derivatives of the state.\n",
     "    \n",
-    "    state: position, velocity\n",
+    "    state: position, velocit\n",
+    "    y\n",
     "    t: time\n",
     "    system: System object containing `g`\n",
     "    \n",
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +342,7 @@
        " <Quantity(-0.0, 'newton / kilogram')>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -430,19 +431,21 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#ts = linspace(t_0, t_end, 200)\n",
+    "#results, details = run_ode_solver(system, slope_func, t_eval = ts)\n",
     "results, details = run_ode_solver(system, slope_func)\n",
     "details"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +668,7 @@
        "3.155693e+07  1.381817e+11  2.581481e+10 -5.874013e+03  30507.610893"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
