Updated Project 3 QMRI. Added I secton.

--- a/code/Project_3.ipynb
+++ b/code/Project_3.ipynb
@@ -12,17 +12,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assumptions\n",
-    "* Ignoring temperature changes for the fluid and how this effects density. Just choosing based off of the listed temperature from the [Engineering Toolbox Chart](https://www.engineeringtoolbox.com/liquids-densities-d_743.html \"Engineering Toolbox\").\n",
-    "* That the force of the penguin exerted on the fluid does not change based on fluid density. We made this assumption because it makes sense that there is a maximum force the penguin can exert regardless of density. IE if it was pushing against an infinitely dense solid it could not exert an infinite force. However, it also makes sense that their would be a fluid that was not dense enough to exert maximum force onto it (IE Air). We chose to ignore this because although we have fluids heavier and lighter than sea water, they are not at either extreme.\n",
-    "* Penguins flap their flippers 50% of the time when exerting maximum force.\n",
-    "* When penguins reset their flippers back to the ready to propel positions, they do not push themselves backwards at all. This assumption was made because we figured the force would be relatively small as penguins are efficient and aerodynamic swimmers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Question: How does changing the fluid in which a penguin swims alter its velocity, acceleration, and swim time?"
    ]
   },
@@ -35,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,12 +57,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Assumptions\n",
+    "* Ignoring temperature changes for the fluid and how this effects density. Just choosing based off of the listed temperature from the [Engineering Toolbox Chart](https://www.engineeringtoolbox.com/liquids-densities-d_743.html \"Engineering Toolbox\").\n",
+    "* That the force of the penguin exerted on the fluid does not change based on fluid density. We made this assumption because it makes sense that there is a maximum force the penguin can exert regardless of density. IE if it was pushing against an infinitely dense solid it could not exert an infinite force. However, it also makes sense that their would be a fluid that was not dense enough to exert maximum force onto it (IE Air). We chose to ignore this because although we have fluids heavier and lighter than sea water, they are not at either extreme.\n",
+    "* Penguins flap their flippers 50% of the time when exerting maximum force.\n",
+    "* When penguins reset their flippers back to the ready to propel positions, they do not push themselves backwards at all. This assumption was made because we figured the force would be relatively small as penguins are efficient and aerodynamic swimmers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scematic Diagram \n",
+    "\n",
+    "ADD SCHEMATIC DIAGRAM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Differential Equations\n",
+    "\n",
+    "ADD DIFFERENTIAL EQUATIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Our model uses force equations to derive the velocity and distance traveled of a penguin. It runs a simulation of the force of the penguin swimming versus the drag force and records the time it takes for the penguin to travel the length of an Olympic swimming pool."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +100,7 @@
        "''"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +217,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +366,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,12 +379,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function plots the distance and velocity vs. time in labeled graphs. It also calls on three functions: plot_info, calc_total_time, and calc_max_speed. These three functions provide succint information for the result."
+    "This function plots the distance and velocity vs. time in labeled plots. It also calls on three functions: plot_info, calc_total_time, and calc_max_speed. These three functions provide succint information for the result."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,13 +584,13 @@
     "\n",
     "#### Instananeous Penguin Force\n",
     "\n",
-    "Although we can find the average force of the penguin on the fluid, this force is not constant. To move, the penguin must move their flippers in the water to propel itself. When the penguin is pushing back, it exerts force on the fluid and accelerates. When the penguin is pulling their flippers from back to front, it is setting itself up for another push and is slowing down due to the drag force of the water. It is not accelerating at this point.\n",
+    "Although we can find the average force of the penguin on the fluid, this force is not constant. To move, the penguin must move their flippers in the water to propel itself. When the penguin is pushing back into the water, it exerts force on the fluid and accelerates. When the penguin is pulling their flippers from back to front, it is setting itself up for another push and is slowing down due to the drag force of the water. It is not accelerating at this point.\n",
     "\n",
-    "To account for this, we need to find the instananeous penguin force. This will allow us to find the instaneous acceleration. We need the average penguin force value to find this.\n",
+    "To account for this, we need to find the instananeous penguin force. This will allow us to find the instaneous acceleration. \n",
     "\n",
-    "#### Sawtooth Model\n",
+    "#### Sawtooth Force Model\n",
     "\n",
-    "Since thepenguing is only exerting a force around 50% of the time, a sawtooth model seemed like a logical first step. The assumption that the penguin only exerts force around 50% of the time is a rough estimate from watching [Gentoo Penguin swim](https://www.youtube.com/watch?v=_TXKiz_DGc4 \"Video\").\n",
+    "Since the penguin is only exerting a force around 50% of the time, a sawtooth model seemed like a logical first step. The assumption that the penguin only exerts force around 50% of the time is a rough estimate from watching [Gentoo Penguin swim](https://www.youtube.com/watch?v=_TXKiz_DGc4 \"Video\"). We also liked the sawtooth model because a penguin is going to have times when it makes better contact with the water and can exert more force, just as  a Sawtooth model slopes to a point and goes back down.\n",
     "\n",
     "The sawtooth function has a period which matches the flapping rate of our penguin. The magnitude of the sawtooth wave is four times the average force exerted by the penguin (More on this later).\n",
     "\n",
@@ -583,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +616,10 @@
     "    params_penguin.rho = rho_sea_water\n",
     "    system_penguin = make_system(params_penguin)\n",
     "    f_penguin_avg = - force_drag(system.p_max_avg_speed, system_penguin)\n",
-    "    p_flap = 4 * f_penguin_avg * signal.sawtooth((1/system.p_flap_speed) * 2 * pi * t, 0.5)\n",
+    "    \n",
+    "    amplitude = 4 * f_penguin_avg\n",
+    "    wavelength = 1/system.p_flap_speed\n",
+    "    p_flap = amplitude * signal.sawtooth(wavelength * 2 * pi * t, 0.5)\n",
     "    if (p_flap > 0 * N):\n",
     "        f_penguin = p_flap\n",
     "    else: \n",
@@ -610,18 +631,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also tried calculating force of the penguin using a sin wave to represent the wing movement.\n",
+    "#### Sin Force Model\n",
     "\n",
-    "The wavelength matches the flap rate of the penguin. The amplitude is pi * f_penguin_avg where f_penguin_avg is the average force of the penguin on the fluid. This is done such that the average output of our function, where outputs below zero result in zero force, averages to be the average force of the penguin.\n",
+    "We also tried calculating force of the penguin using a sin wave to represent the flipper force. We thought a sin wave might make more sense as it is less abrupt than a sawtooth model (More time spent exerting an efficient force). This seemed more representative of how a penguin pushes against the water  and how there is a time about halfway through their motion that it is using most of their flipper length to push against the water. Towards the beginning and end of the motion the penguin is much less efficient than in the middle.\n",
     "\n",
-    "The average value of one arc of a sin wave (With an amplitude of 1) is .636619772367581. The inverse (1 / .64) of this is 1.57 or pi / 2. This pi / 2 value needs to be multiplied by f_penguin_avg to result in the average output of the positive portion of the sin wave to equal f_penguin_avg.\n",
+    "The wavelength matches the flap rate of the penguin. The amplitude is pi * f_penguin_avg (where f_penguin_avg is the average force of the penguin on the fluid). This is done such that the average output of our function, where outputs below zero result in zero force, averages to be the average force of the penguin.\n",
+    "\n",
+    "The average value of one arc of a sin wave (With an amplitude of 1) is .636619772367581. The inverse of this is pi / 2. This pi / 2 value needs to be multiplied by f_penguin_avg to result in the average output of the positive portion of the sin wave to equal f_penguin_avg.\n",
     "\n",
     "However, since there is also a portion of our function where the output is below zero and the penguin force is zero we need to multiply the value by two again. Hence why pi * f_penguin_avg for our amplitude results in an average penguin force of f_penguin_avg."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,9 +660,9 @@
     "    system_penguin = make_system(params_penguin)\n",
     "    f_penguin_avg = - force_drag(system.p_max_avg_speed, system_penguin)\n",
     "    \n",
-    "    amplitude = f_penguin_avg\n",
-    "    wavelength = (1/system.p_flap_speed)\n",
-    "    p_flap = pi * amplitude * math.sin(wavelength * 2 * pi * t)\n",
+    "    amplitude = pi * f_penguin_avg\n",
+    "    wavelength = 1/system.p_flap_speed\n",
+    "    p_flap = amplitude * math.sin(wavelength * 2 * pi * t)\n",
     "    if (p_flap > 0 * N):\n",
     "        f_penguin = p_flap\n",
     "    else: \n",
@@ -656,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -951,6 +974,30 @@
    "metadata": {},
    "source": [
     "# Interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How the Output and Model answered the Question\n",
+    "Our Model helped us to answer the question by giving us a quantantative and visual answer. The Position vs Time plot and total time print out gave us an overall view of how different fluids change the time it takes the penguin to cover distance. \n",
+    "\n",
+    "The Velocity vs Time plot gave us a good visualization of how a penguin swims. Printing out values such as the max speed and average speed provided a quantative look at the peak velocity the Gentoo penguin was able to reach in each substance.\n",
+    "\n",
+    "Doing this in a python model instead of with a fully alegbraic model (Such as one that could be done by hand) allowed us to easily track velocity over time. This is especially seen in how we modeled the force of the penguin on the fluid, as this changes multiple times per second due to the flapping of the penguin's flippers. Using a python model also made it easy to test multiple fluids quickly and easily.\n",
+    "\n",
+    "Overall, having both a position vs time plot and velocity vs time plot, as well as printed summary statements, made it easy to glance just at the results and get a good answer to the question. This answer was significantly more in depth than just a denser fluid will result in a slower penguin.\n",
+    "#### Model Limitations\n",
+    "All in all, our model does an effective job answering our original question with sufficient accuracy.\n",
+    "\n",
+    "ADD MORE LIMITATIONS, ASSUMPTIONS-\n",
+    "#### Iteration\n",
+    "The biggest iteration our model went through was the change in how we represented the force of the penguiin. Originally, our penguin's force was constant, just equivelent to the average force as derived from the drag equation. Although this gave us very similar total time results to our current model, this force model does not accurately represent how a penguin exerts force on the water. \n",
+    "\n",
+    "To fix this, we tested two seperate functions to model the penguin's force exerted on the water: a sawtooth and sin wave. This can be clearly seen in the Velocity vs Time plots. This is another place where our python model allows us to do more than a simple algebraic one could reasonably accomplish.\n",
+    "\n",
+    "Another major area of iteration was in the presentation of data. Originaly, there were just the Position vs Time and Velocity vs Time plots. Although these technically display all the essential data, they are hard to parse and quickly differentiate between different fluids. Adding summary statements for the performance of the penguin (total time, max speed, average speed) helped this vastly."
    ]
   },
   {
